Fix input font-size to 16px minimum on mobile to prevent iOS auto-zoom

--- a/src/components/DeliveryAutocomplete/DeliveryAutocomplete.scss
+++ b/src/components/DeliveryAutocomplete/DeliveryAutocomplete.scss
@@ -40,7 +40,7 @@
     flex: 1;
     border: none;
     outline: none;
-    font-size: 14px;
+    font-size: 16px;
     color: v.$color-text-primary;
     background: transparent;
     padding: 0;
