--- a/src/styles/pages/_checkout.scss
+++ b/src/styles/pages/_checkout.scss
@@ -224,7 +224,7 @@
     }
 
     @media (max-width: v.$breakpoint-sm) {
-      font-size: v.$font-size-sm;
+      font-size: v.$font-size-base;
     }
   }
 
